@@ -1,3 +1,7 @@
+## HEAD
+
+* Fixed deployments so they don't try to deploy if the attributes fail to update
+
 ## v0.5.5
 
 * Added backoff functionality to updates so they work better with the force option
